# bezier_examples

./: .rosinstall
bezier_examples/: CMakeLists.txt  package.xml
bezier_examples/config/: robot_state_visualize.rviz
bezier_examples/launch/: fanuc_cr7ial_surfacing.launch  fanuc_m10ia_painting_fix.launch  fanuc_m10ia_surfacing_fix.launch  glual_surfacing.launch
bezier_examples/meshes/3d/: Pieza3D_STL.stl  Pieza3D_Surf_m_no_hole.stl  Pieza_Surf.ply  Pieza_Surf.stl  Pieza_Surf_2.ply  Pieza_Surf_3.ply  Pieza_Surf_4.ply  Pieza_Surf_m.stl  Pieza_Surf_no_hole.ply  pieza_3d.ply  pieza_surf.blend  pieza_surf.blend1
bezier_examples/meshes/plane/: plane_2.ply
bezier_examples/src/: surfacing_fegescan.cpp
gluscan_fanuc_config/gluscan_cr7ial_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gluscan_fanuc_config/gluscan_cr7ial_moveit_config/config/: cr7ial_workspace.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml
gluscan_fanuc_config/gluscan_cr7ial_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
gluscan_fanuc_config/gluscan_cr7ial_workspace_support/: CHANGELOG.md  CMakeLists.txt  package.xml
gluscan_fanuc_config/gluscan_cr7ial_workspace_support/urdf/: cr7ial_workspace.urdf.xacro
gluscan_fanuc_config/scan_blend_end_effector/: CMakeLists.txt  package.xml
gluscan_fanuc_config/scan_blend_end_effector/urdf/: blending_eef.urdf  blending_eff_macro.xacro
