<?xml version="1.0"?>
<package format="2">
  <name>gluscan_cr7ial_workspace_support</name>
  <version>1.0.0</version>
  <description>
      URDF description for a workspace containing a Fanuc cr7ial robot arms
  </description>

  <author>Paul Daelman</author>
  <maintainer email="paul.daelman@tecnalia.com">Paul Daelman</maintainer>

  <license>TRI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <exec_depend>cr7ial_descartes_ikfast_adapter</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend> -->
  <exec_depend>fanuc_cr7ia_support</exec_depend>
  <exec_depend>fanuc_driver</exec_depend>
  <exec_depend>fanuc_resources</exec_depend>
  <!-- <exec_depend>gluscan_cr7ial_moveit_config</exec_depend>
  <exec_depend>gluscan_surface_detection</exec_depend>
  <exec_depend>gluscan_path_execution</exec_depend>
  <exec_depend>gluscan_process_execution</exec_depend>
  <exec_depend>gluscan_process_planning</exec_depend>
  <exec_depend>quelltech_laser_scanner_ros</exec_depend> -->
  <exec_depend>industrial_robot_simulator</exec_depend>
  <exec_depend>industrial_robot_simulator_service</exec_depend>
  <!-- <exec_depend>manipulator_controller</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>zivid_camera</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
